--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,10 +60,16 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
-# Swiftmailer Configuration
-swiftmailer:
+    # Swiftmailer Configuration
+    swiftmailer:
     transport: '%mailer_transport%'
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+    # Stof\DoctrineExtensionsBundle configuration
+    stof_doctrine_extensions:
+        orm:
+            default:
+                sluggable: true
