--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.4.*",
+        "stof/doctrine-extensions-bundle": "^1.2.2",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
