--- a/src/OC/PlatformBundle/Resources/config/services.yml
+++ b/src/OC/PlatformBundle/Resources/config/services.yml
@@ -1,7 +1,26 @@
+# src/OC/PlatformBundle/Resources/config/services.yml
+
 services:
-    oc_platform.antispam:
-        class: OC\PlatformBundle\Antispam\OCAntispam
-        arguments:
-            - "@mailer"
-            - %locale%
-            - 50
+  oc_platform.antispam:
+      class: OC\PlatformBundle\Antispam\OCAntispam
+      arguments:
+          - "@mailer"
+          - %locale%
+          - 50
+
+  oc_platform.email.application_mailer:
+      class: OC\PlatformBundle\Email\ApplicationMailer
+      arguments:
+          - "@mailer"
+
+  oc_platform.doctrine_listener.application_creation:
+    class: OC\PlatformBundle\DoctrineListener\ApplicationCreationListener
+    arguments:
+      - "@oc_platform.email.application_mailer"
+    tags:
+      - { name: doctrine.event_listener, event: postPersist }
+
+  oc_platform.purger.advert:
+    class: OC\PlatformBundle\Purger\AdvertPurger
+    arguments:
+      - "@doctrine.orm.entity_manager"
