--- a/src/OC/PlatformBundle/Resources/config/services.yml
+++ b/src/OC/PlatformBundle/Resources/config/services.yml
@@ -5,8 +5,9 @@ services:
       class: OC\PlatformBundle\Antispam\OCAntispam
       arguments:
           - "@mailer"
-          - %locale%
           - 50
+      calls:
+      - [ setLocale, [%locale%] ]
 
   oc_platform.email.application_mailer:
       class: OC\PlatformBundle\Email\ApplicationMailer
@@ -32,3 +33,15 @@ services:
       - "@doctrine.orm.entity_manager"
     tags:
       - { name: validator.constraint_validator, alias: oc_platform_antiflood }  # C'est avec l'alias qu'on retrouvera le service
+
+  oc_platform.twig.antispam_extension:
+    class: OC\PlatformBundle\Twig\AntispamExtension
+    arguments:
+      - "@oc_platform.antispam"
+    tags:
+      -  { name: twig.extension }
+
+  oc_platform.form.ckeditor:
+    class: OC\PlatformBundle\Form\CkeditorType
+    tags:
+      - { name: form.type, alias: ckeditor }
