--- a/src/OC/PlatformBundle/Resources/config/services.yml
+++ b/src/OC/PlatformBundle/Resources/config/services.yml
@@ -45,3 +45,27 @@ services:
     class: OC\PlatformBundle\Form\CkeditorType
     tags:
       - { name: form.type, alias: ckeditor }
+
+  oc_platform.beta.html_adder:
+    class: OC\PlatformBundle\Beta\BetaHTMLAdder
+
+  oc_platform.beta.listener:
+    class: OC\PlatformBundle\Beta\BetaListener
+    arguments:
+      - "@oc_platform.beta.html_adder"
+      - "2017-06-01"
+    tags:
+      - { name: kernel.event_listener, event: kernel.response, method: processBeta }
+
+  oc_platform.bigbrother.message_notificator:
+    class: OC\PlatformBundle\Bigbrother\MessageNotificator
+    arguments:
+      - "@mailer"
+
+  oc_platform.bigbrother.message_listener:
+    class: OC\PlatformBundle\Bigbrother\MessageListener
+    arguments:
+      - "@oc_platform.bigbrother.message_notificator"
+      - ["alex", "marine", "pierre"]
+    tags:
+      - { name: kernel.event_listener, event: oc_platform.post_message, method: processMessage }
